INFO:
All changes should be appended to this file with each commit.
On publish, it should be cleared to prepare for the next release cycle.
No formatting, just plain text. CurseForge support for it is terrible.

Change logging starts below:
----------